--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,27 @@
+html, body {
+	margin: 0;
+}
+
+.container {
+	margin-right: 30px;
+	margin-left: 30px;
+}
+
+.top-bar {
+	width: 100%;
+	height: 30px;
+	background-color: #f2f2f2;
+	margin-bottom: 40px;
+
+}
+
+.bottom-bar {
+	width: 100%;
+	height: 30px;
+	background-color: #f2f2f2;
+	margin-top: 40px;
+}
+
 /*wrapped in a media query so the grid code goes away on mobile, images are full width so no extra code is needed*/
 @media (min-width: 720px) {
 	.grid {
@@ -58,6 +82,29 @@ img {
 
 #grid-6 {
 	width: 75%;
+}
+
+h1 {
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: 100;
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+}
+
+button {
+	font-family: 'Open Sans', sans-serif;
+	height: 44px;
+	width: 100px;
+	background-color: transparent;
+	border: solid 3px #f2f2f2;
+	font-size: 12px;
+}
+
+button:hover {
+	cursor: pointer;
+	background-color: #e6e6e6;
 }
 
 @media (max-width: 720px) {
