--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html, body {
 	height: 30px;
 	background-color: #f2f2f2;
 	margin-bottom: 40px;
-
 }
 
 .bottom-bar {
@@ -108,18 +107,20 @@ button:hover {
 }
 
 @media (max-width: 720px) {
-		#grid-1 {
-	width: 100%;
-}
+	#grid-1 {
+		width: 100%;
+	}
 
-#grid-4 {
-	width: 100%;
-}
+	#grid-4 {
+		width: 100%;
+	}
 
-#grid-6 {
-	width: 100%;
-}
+	#grid-6 {
+		width: 100%;
+	}
 
-
+	button {
+		margin-bottom: 20px;
+	}
 }
 
